--- a/org/gjt/sp/jedit/jedit.props
+++ b/org/gjt/sp/jedit/jedit.props
@@ -112,7 +112,9 @@ hypersearch.maxWarningResults=1000
 hypersearch.displayQueryLength=100
 
 # Style for highlighting matches in hypersearch results
-hypersearch.results.highlight=bgColor:#ccccff
+hypersearch.results.highlight=bgColor:#FFFFFF
+hypersearch.results.highlight1=bgColor:#0000FF
+
 
 # Confirm dialogs
 confirmSaveAll=true
